{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 58,
  "lineage": "720fca1d-9f7b-d704-88ad-de0c959c1912",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGITMIac_VSCode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184085038:internet-gateway/igw-085976884e086fd46",
            "id": "igw-085976884e086fd46",
            "owner_id": "590184085038",
            "tags": {
              "Name": "IG-ITMIac_VSCode by terraform"
            },
            "tags_all": {
              "Name": "IG-ITMIac_VSCode by terraform"
            },
            "vpc_id": "vpc-09f5057817b082120"
          },
          "dependencies": [
            "aws_vpc.VPCITMaVSCode"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "RT_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c19112ea5bf9635a",
            "original_route_table_id": "rtb-05f818f9181c58e82",
            "route_table_id": "rtb-0c3dc77df15a69ee6",
            "vpc_id": "vpc-09f5057817b082120"
          },
          "dependencies": [
            "aws_internet_gateway.IGITMIac_VSCode",
            "aws_route_table.RT-ITMIac_VSCode",
            "aws_vpc.VPCITMaVSCode"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "NACL_ITMIac_VSCode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184085038:network-acl/acl-0f4714907910c2401",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.3.0.0/18",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-0f4714907910c2401",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.3.0.0/18",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "590184085038",
            "subnet_ids": [],
            "tags": {
              "Name": "NACL-ITMIac_VSCode by terraform"
            },
            "tags_all": {
              "Name": "NACL-ITMIac_VSCode by terraform"
            },
            "vpc_id": "vpc-09f5057817b082120"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPCITMaVSCode"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "NACL_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-02aaffcffbfe1c3d9",
            "network_acl_id": "acl-0f4714907910c2401",
            "subnet_id": "subnet-0b1f6db99c8ed246c"
          },
          "dependencies": [
            "aws_network_acl.NACL_ITMIac_VSCode",
            "aws_subnet.SUBNET_ITMIaX_1_VSCode",
            "aws_vpc.VPCITMaVSCode"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-ITMIac_VSCode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184085038:route-table/rtb-0c3dc77df15a69ee6",
            "id": "rtb-0c3dc77df15a69ee6",
            "owner_id": "590184085038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-085976884e086fd46",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-ITMIac_VSCode by terraform"
            },
            "tags_all": {
              "Name": "RT-ITMIac_VSCode by terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f5057817b082120"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGITMIac_VSCode",
            "aws_vpc.VPCITMaVSCode"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUBNET_ITMIaX_1_VSCode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184085038:subnet/subnet-0b1f6db99c8ed246c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.30.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1f6db99c8ed246c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184085038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet 1 by terraform"
            },
            "tags_all": {
              "Name": "Subnet 1 by terraform"
            },
            "vpc_id": "vpc-09f5057817b082120"
          },
          "dependencies": [
            "aws_vpc.VPCITMaVSCode"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUBNET_ITMIaX_2_VSCode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184085038:subnet/subnet-0f6dfad3a3ce2b9d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6dfad3a3ce2b9d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184085038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet 2 by terraform"
            },
            "tags_all": {
              "Name": "Subnet 2 by terraform"
            },
            "vpc_id": "vpc-09f5057817b082120"
          },
          "dependencies": [
            "aws_vpc.VPCITMaVSCode"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPCITMaVSCode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184085038:vpc/vpc-09f5057817b082120",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-0766a5b5b43685b2d",
            "default_route_table_id": "rtb-05f818f9181c58e82",
            "default_security_group_id": "sg-0aff3ae09bb154dce",
            "dhcp_options_id": "dopt-0ca5bee990dda25b9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09f5057817b082120",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f818f9181c58e82",
            "owner_id": "590184085038",
            "tags": {
              "Name": "VPCITMIaCVCode"
            },
            "tags_all": {
              "Name": "VPCITMIaCVCode"
            }
          }
        }
      ]
    }
  ]
}